tradução para espanhol

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -240,6 +240,7 @@ main {
                     }
 
                     img {
+                        max-width: 500px;
                         margin: auto;
                         display: block;
                     }
