--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -158,4 +158,18 @@
 
         }
     }
+
+    [type=radio] { 
+        position: absolute;
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      
+      /* IMAGE STYLES */
+      [type=radio] + img {
+        cursor: pointer;
+        margin: 5px;
+      }
+      
 }
