Fazendo ultimas mudanças

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,7 +4,7 @@ footer{
     color: white;
     text-shadow: 2px 2px 1px black;
     margin-top: 5px;
-    height: 50px;
+    height: 100%;
     line-height: 50px;
     max-width: 100%;
 
