--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -117,6 +117,10 @@ a {
         .col {
             flex: 0 0 50%;
             max-width: 50%;
+            @media screen and (max-width: 960px) {
+                max-width: 100%;
+            }
+            
         }
     }
 
@@ -161,6 +165,10 @@ a {
     box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.10);
     align-items: center;
     scroll-behavior: smooth;
+
+    @media screen and (max-width: 960px) {
+        padding: 20px 20px;
+    }
 
     h2 {
         margin: 10px 0px;
@@ -245,5 +253,16 @@ a {
             }
         }
 
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .alunos {
+        table {
+            tr {
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
 }
