--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -15,7 +15,7 @@
         width: 70%;
         margin: auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
 
         .header--logotipo {
@@ -89,8 +89,14 @@
             display: none;
         }
 
+        .languages {
+            display: flex;
+        }
+
         @media screen and (max-width: 960px) {
             align-items: initial;
+            justify-content: flex-start;
+
 
             .NavbarItems {
                 position: relative;
@@ -154,8 +160,6 @@
                 color: #9bcee4;
                 font-size: 2rem;
             }
-
-
         }
     }
 
