--- a/src/styles/vaccines.scss
+++ b/src/styles/vaccines.scss
@@ -1,5 +1,5 @@
 .banner-vacinas {
-    height: 62vh;
+    height: 100vh;
     display: flex;
     align-items: baseline;
     justify-content: start;
@@ -7,6 +7,7 @@
     z-index: 1;
     max-width: 100%;
     align-content: stretch;
+    background: linear-gradient(rgba(0, 0, 0, .8), rgba(255, 255, 255, .5)), url("../assets/images/banner-vacinas.jpg");
 
     @media screen and (max-width: 960px) {
         height: auto;
@@ -46,18 +47,18 @@
         }
     }
 
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: linear-gradient(rgba(0, 0, 0, .8), rgba(255, 255, 255, .5)), url("../assets/images/banner-vacinas.jpg");
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+    // &::before {
+    //     content: "";
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     background: linear-gradient(rgba(0, 0, 0, .8), rgba(255, 255, 255, .5)), url("../assets/images/banner-vacinas.jpg");
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: -1;
+    //     background-repeat: no-repeat;
+    //     background-size: cover;
+    // }
 }
 
 
